Fixed a bug that causes flickering when collapsing the ribbon.

--- a/Resources/Stylesheets/OfficeUI.Core.less
+++ b/Resources/Stylesheets/OfficeUI.Core.less
@@ -53,8 +53,9 @@ body, html { height: 100%; width: 100%; }
   > .header {
     background: url('/OfficeUI.Beta/Resources/Images/Application/Backgrounds/Circuit.png') no-repeat scroll right top rgba(255, 255, 255, 1);
     height: 52px;
-    z-index: 2;
+    z-index: 30;
     width: 100%;
+    background-color:white;
     .title { margin-top: 6px; margin-left: -1px; }
   }
 
